update fontawesome css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <title>Tom Tran's profile</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&family=Bungee+Hairline&family=Nixie+One&family=Chango&family=Hepta+Slab:wght@200;500;800&family=Ribeye&family=Modak&family=Luckiest+Guy&family=Inika&family=Oldenburg&display=swap" rel="stylesheet">
 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/v6.0/css/font-awesome.min.css"
         type="text/css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/102_circle.png">
 
-    <link rel="stylesheet" href="/app/scss/style.css" class="css">
+    <link rel="stylesheet" href="style.css" class="css">
+    <script src="https://kit.fontawesome.com/b76e17eff2.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -39,27 +44,27 @@
                 <h3 class="title">Contact</h3>
                 <table class = 'contact center'>
                     <tr>
-                        <th class='left'><i class="fa fa-skype fa-lg"></i></i></th>
+                        <th class='left'><i class="fab fa-skype fa-lg"></i></i></th>
                         <th class='right'>tranthientoan102</th>
                     </tr>
                     <tr>
-                        <th class='left'><i class="fa fa-google fa-lg"></i></th>
+                        <th class='left'><i class="fab fa-google fa-lg"></i></th>
                         <th class='right'>tranthientoan102</th>
                     </tr>
                     <tr>
-                        <th class='left'><i class="fa fa-phone fa-lg"></i></th>
+                        <th class='left'><i class="fas fa-phone-alt"></i></th>
                         <th class='right'>0406072075</th>
                     </tr>
                     <tr>
-                        <th class='left'><i class="fa fa-github fa-lg" aria-hidden="true"></i></th>
+                        <th class='left'><i class="fab fa-github fa-lg" aria-hidden="true"></i></th>
                         <th class='right'><a href="https://github.com/tranthientoan102">tranthientoan102</a></th>
                     </tr>
                     <tr>
-                        <th class='left'><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></th>
+                        <th class='left'><i class="fab fa-linkedin-in fa-lg"></i></th>
                         <th class='right'><a href="https://www.linkedin.com/in/tranthientoan102/">tranthientoan102</a></th>
                     </tr>
                     <tr>
-                        <th class='left'><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></th>
+                        <th class='left'><i class="fab fa-twitter fa-lg"></i></i></th>
                         <th class='right'><a href="https://twitter.com/tranthietoan102">Tom Tran</a></th>
                     </tr>
 
