update image url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/v6.0/css/font-awesome.min.css"
         type="text/css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/102_circle.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://tranthientoan102.github.io/onlineCV/images/102_circle.png">
 
     <link rel="stylesheet" href="style.css" class="css">
     <script src="https://kit.fontawesome.com/b76e17eff2.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
         <div class="leftSide">
             <div class="imageBox">
                 <!-- <img class='happyface'/> -->
-                <img src="/images/crop_DSC3154.jpg" alt="Avatar">
+                <img src="https://tranthientoan102.github.io/onlineCV/images/crop_DSC3154.jpg" alt="Avatar">
             </div>
             <div class="profileText block">
                 <h2 class='name'>Tom Tran<br>
