fix title color

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                 <h2>Current work</h2>
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgBlue flexGrow">Casual Worker </div>
-                        <div class="title bgBlue2 flexGrow">Misa Soyfood</div>
+                        <div class="title bgBlue white flexGrow">Casual Worker </div>
+                        <div class="title bgBlue2 white flexGrow">Misa Soyfood</div>
                         <div class="title bgBlue3 blue flexGrow">Adelaide</div>
                         <div class="title bgBlue4 blue flexGrow5">2020 Aug - now</div>
                     </div>
@@ -267,8 +267,8 @@
                 <!-- <div class="columnWrapper py-2 pl_1" id="myWork"> -->
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgGreen flexGrow">Java Developer </div>
-                        <div class="title bgGreen2 flexGrow">ZaloPay, VNG Corp</div>
+                        <div class="title bgGreen white flexGrow">Java Developer </div>
+                        <div class="title bgGreen2 white flexGrow">ZaloPay, VNG Corp</div>
                         <div class="title bgGreen3 green flexGrow">HCM city, Vietnam</div>
                         <div class="title bgGreen4 green flexGrow5">2019 Apr - 2020 Feb</div>
                     </div>
@@ -355,8 +355,8 @@
                 <!-- <div class="columnWrapper py-2 pl_1" id="myWork"> -->
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgGreen flexGrow" >Java Developer </div>
-                        <div class="title bgGreen2 flexGrow">Renesas VN</div>
+                        <div class="title bgGreen white flexGrow" >Java Developer </div>
+                        <div class="title bgGreen2 white flexGrow">Renesas VN</div>
                         <div class="title bgGreen3 green flexGrow">HCM city, Vietnam</div>
                         <div class="title bgGreen4 green flexGrow5">2017 Sep - 2019 Mar</div>
                     </div>
@@ -424,8 +424,8 @@
                 
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgGreen flexGrow" >C/C++ Developer </div>
-                        <div class="title bgGreen2 flexGrow">Bosch VN</div>
+                        <div class="title bgGreen white flexGrow" >C/C++ Developer </div>
+                        <div class="title bgGreen2 white flexGrow">Bosch VN</div>
                         <div class="title bgGreen3 green flexGrow">HCM city, Vietnam</div>
                         <div class="title bgGreen4 green flexGrow5">2014 Aug - 2017 Sep</div>
                     </div>
@@ -478,8 +478,8 @@
 
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgGreen flexGrow" >Automate Test Engineer </div>
-                        <div class="title bgGreen2 flexGrow">Marquis Tech.</div>
+                        <div class="title bgGreen white flexGrow" >Automate Test Engineer </div>
+                        <div class="title bgGreen2 white flexGrow">Marquis Tech.</div>
                         <div class="title bgGreen3 green flexGrow">Seoul, South Korea</div>
                         <div class="title bgGreen4 green flexGrow5">2013 Dec - 2015 Mar</div>
                     </div>
