add class verticalAlignBaseline

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <div class="myCardWrapper m_dot25_0_dot25_dot75">
                     <table>
                         <tr class='bgBlue3'>
-                            <th class="p_dot5"><b>ONGOING</b></th>
+                            <th class="p_dot5 verticalAlignBaseline"><b>ONGOING</b></th>
                             <th class="right myCardWrapper p_dot5">
                                 <div class="skewTag"><p>Distributed database</p></div>
                                 <div class="skewTag"><p>Statistical Machine Learning</p></div>
@@ -531,7 +531,7 @@
                             </th>
                         </tr>
                         <tr class='bgGreen3'>
-                            <th class="p_dot5 green"><b>DONE</b></th>
+                            <th class="p_dot5 green verticalAlignBaseline"><b>DONE</b></th>
                             <th class="right myCardWrapper p_dot5">
                                 <div class="skewTagGreen"><p>Fundamental Programming</p></div>
                                 <div class="skewTagGreen"><p>Mathematical Foundation for DS</p></div>
@@ -542,7 +542,7 @@
                             </th>
                         </tr>
                         <tr class='bgGreen4'>
-                            <th class="p_dot5 green"><b>SELF LEARN</b></th>
+                            <th class="p_dot5 green verticalAlignBaseline"><b>SELF LEARN</b></th>
                             <th class="right myCardWrapper p_dot5">
                                 <div class="skewTagGreen"><p>Python Basic</p></div>
                                 <div class="skewTagGreen"><p>Python Plotting</p></div>
