--- a/index.html
+++ b/index.html
@@ -218,6 +218,27 @@
             </div>
 
             <div class="block">
+                <h2>Demos</h2>
+                <div class="myCardWrapper flexGrow py-2 pl_dot75" id="myWork">
+                    <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/md1/ThienToen_a5.html"><img src="./demos/md1/32.png"></a></div>
+                        <div class="details pl_dot5">Statistics assignament with markdown
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md1/ThienToen_a5.html">View</a>
+                            </div>
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md1/ThienToen_a5.pdf">Download</a>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="ending"></div>
+
+            </div>
+
+
+            <div class="block">
                 <h2>Current work</h2>
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
