--- a/index.html
+++ b/index.html
@@ -221,16 +221,26 @@
                 <h2>Demos</h2>
                 <div class="myCardWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCard">
-                        <div class="meta bgWhite w80px"><a href="./demos/md1/ThienToen_a5.html"><img src="./demos/md1/32.png"></a></div>
+                        <div class="meta bgWhite w80px"><a href="./demos/md1/ThienToan_a5.html"><img src="./demos/md1/32.png"></a></div>
                         <div class="details pl_dot5">Statistics assignament with markdown
                             <div class="myCard m_dot1">
-                                <a class='small' href="./demos/md1/ThienToen_a5.html">View</a>
+                                <a class='small' href="./demos/md1/ThienToan_a5.html">View</a>
                             </div>
                             <div class="myCard m_dot1">
-                                <a class='small' href="./demos/md1/ThienToen_a5.pdf">Download</a>
+                                <a class='small' href="./demos/md1/ThienToan_a5.pdf">Download</a>
                             </div>
                         </div>
-                        
+                    </div>
+                    <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/md2/ThienToan_a4.html"><img src="./demos/md2/e1graph.png"></a></div>
+                        <div class="details pl_dot5">Statistics assignament with markdown
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md2/ThienToan_a4.html">View</a>
+                            </div>
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md1/ThienToan_a4.pdf">Download</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="ending"></div>
