--- a/index.html
+++ b/index.html
@@ -221,6 +221,39 @@
                 <h2>Demos</h2>
                 <div class="myCardWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/md4/pageRanking-final.html"><img src="./demos/md4/Screenshot_20210727_032704.png"></a></div>
+                        <div class="details pl_dot5">Page rank with Jupyter
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md4/pageRanking-final.html">View</a>
+                            </div>
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md4/pageRanking-final.ipynb">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/md3/a3e1.html"><img src="./demos/md3/Screenshot_20210727_030215.png"></a></div>
+                        <div class="details pl_dot5">Mining Frequence Item with Jupyter
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md3/a3e1.html">View</a>
+                            </div>
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md3/a3e1.ipynb">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/md2/ThienToan_a4.html"><img src="./demos/md2/Screenshot_20210727_033603.png"></a></div>
+                        <div class="details pl_dot5">Statistics assignament with markdown
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md2/ThienToan_a4.html">View</a>
+                            </div>
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/md1/ThienToan_a4.pdf">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="myCard">
                         <div class="meta bgWhite w80px"><a href="./demos/md1/ThienToan_a5.html"><img src="./demos/md1/32.png"></a></div>
                         <div class="details pl_dot5">Statistics assignament with markdown
                             <div class="myCard m_dot1">
@@ -231,21 +264,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="myCard">
-                        <div class="meta bgWhite w80px"><a href="./demos/md2/ThienToan_a4.html"><img src="./demos/md2/e1graph.png"></a></div>
-                        <div class="details pl_dot5">Statistics assignament with markdown
-                            <div class="myCard m_dot1">
-                                <a class='small' href="./demos/md2/ThienToan_a4.html">View</a>
-                            </div>
-                            <div class="myCard m_dot1">
-                                <a class='small' href="./demos/md1/ThienToan_a4.pdf">Download</a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="ending"></div>
-
+                
             </div>
+            <div class="ending"></div>
+
+            
 
 
             <div class="block">
