--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
             <div class="block">
                 <h2>Demos</h2>
-                <div class="myCardWrapper flexGrow py-2 pl_dot75" id="myWork">
+                <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCard">
                         <div class="meta bgWhite w80px"><a href="./demos/md4/pageRanking-final.html"><img src="./demos/md4/Screenshot_20210727_032704.png"></a></div>
                         <div class="details pl_dot5">Page rank with Jupyter
