--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
                 <h2>Demos</h2>
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/demo5/kmeans.gif"><img src="./demos/demo5/kmeans.gif"></a></div>
+                        <div class="details pl_dot5">KMean clustering progress
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/demo5/kmeans.gif">View</a>
+                            </div>
+                            <div class="myCard m_dot1">
+                                <a class='small' href="./demos/demo5/kmeans.py">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="myCard">
                         <div class="meta bgWhite w80px"><a href="./demos/md4/pageRanking-final.html"><img src="./demos/md4/Screenshot_20210727_032704.png"></a></div>
                         <div class="details pl_dot5">Page rank with Jupyter
                             <div class="myCard m_dot1">
