update current work

--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
                 <h2>Demos</h2>
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCard">
+                        <div class="meta bgWhite w80px"><a href="./demos/demo6/1.png"><img src="./demos/demo6/1.png"></a></div>
+                        <div class="details pl_dot5">Sentinment analysis and Event detection Web app
+                            <div class="myCard m_dot1">
+                                <a class='small' href="http://20.37.47.186:3000"/>Visit website</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="myCard">
                         <div class="meta bgWhite w80px"><a href="./demos/demo5/kmeans.gif"><img src="./demos/demo5/kmeans.gif"></a></div>
                         <div class="details pl_dot5">KMean clustering progress
                             <div class="myCard m_dot1">
@@ -289,7 +297,74 @@
                 <h2>Current work</h2>
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgBlue white flexGrow">Casual Worker </div>
+                        <div class="title bgBlue white flexGrow">Research team member</div>
+                        <div class="title bgBlue2 white flexGrow">University of Adelaide</div>
+                        <div class="title bgBlue3 blue flexGrow">Adelaide</div>
+                        <div class="title bgBlue4 blue flexGrow5">2021 Sep - now</div>
+                    </div>
+                    <div class="myCardWrapper bgWhite">
+                        <p class='p_dot25_dot5'>                            
+                            I got invitation from my supervisor to join a research team providing a web app and related cloud services presenting team's works. It focus on sentiment analysis, event detection for text data, neural network and PyTorch<br/><br/>
+                            It is hosted at <a href="http://20.37.47.186:3000/">http://20.37.47.186:3000/</a>. You can login with your Gmail and start trying. 
+                        </p>
+                    </div>
+                    <div class="myCardWrapper flexGrow">
+                        <!-- <div class="p_dot25_1 columnWrapper bgBlue3 flexGrow w-1/3"> -->
+                        <div class="techTask">
+                            <h4>Task</h4>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Scrape Twitter's tweets by accounts or keywords or both, let user label tweets with 3 status(negative, neutral, and positive) and related given  event</div>
+                            </div>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Store data online</div>
+                            </div>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Running sentiment analyses and event detection model for evaluating tweet's</div>
+                            </div>
+                        </div>
+                        <div class="techTool">
+                            <h4>Techniques / tools</h4>
+                            <div class="p5px myCardWrapper">
+                                <div class="skewTag"><p>Python</p></div>
+                                <div class="skewTag"><p>FastAPI</p></div>
+                                <div class="skewTag"><p>PyTorch</p></div>
+                                <div class="skewTag"><p>PyTorch Lightning</p></div>
+                                <div class="skewTag"><p>Jupyter</p></div>
+                                <div class="skewTag"><p>Azure Cloud</p></div>
+                                <div class="skewTag"><p>Docker</p></div>
+                                <div class="skewTag"><p>Firebase</p></div>
+                                <div class="skewTag"><p>ReactJS</p></div>
+                                <div class="skewTag"><p>NextJS</p></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h4>Skills</h4>
+                            <div class="p5px myCardWrapper">
+                                <div class="skewTag"><p>Machine learning</p></div>
+                                <div class="skewTag"><p>Neural network</p></div>
+                                <div class="skewTag"><p>Cloud</p></div>
+                                <div class="skewTag"><p>Linux CLI</p></div>
+                                <div class="skewTag"><p>Programming</p></div>
+                                <div class="skewTag"><p>App Deployment</p></div>
+                                <div class="skewTag"><p>Problem solving</p></div>
+                                <div class="skewTag"><p>Bug analyze</p></div>
+                                <div class="skewTag"><p>Time management</p></div>
+                                <div class="skewTag"><p>Team cooperate</p></div>
+                                
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                
+
+
+                <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
+                    <div class="myCardWrapper flexGrow">
+                        <div class="title bgBlue white flexGrow">Part-time Worker </div>
                         <div class="title bgBlue2 white flexGrow">Misa Soyfood</div>
                         <div class="title bgBlue3 blue flexGrow">Adelaide</div>
                         <div class="title bgBlue4 blue flexGrow5">2020 Aug - now</div>
