--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="block mt-10">
                 <h2>About me</h2>
                 <div class="aboutMe">
-                    <p class='p_dot25'>I am a developer with experiences working in automotive and backend projects in multicultural environment
+                    <p class='p_dot25'>I am a developer with 5+ years experience working in automotive and backend projects in multicultural environment, fluent Java and Python language, and work effectively with lots of tools, IDEs, OSs and system schemes. I'm learning Python and ReactJS so I can extend my abilites
                     <p class='p_dot25'>I love to work in diversity environments, where I can learn more from other people’s point of view.</p>
                     <p class='p_dot25'>Currently I’m studying master’s degree of Data Science in University of Adelaide.<br> My degree will finish in July 2022</p>
                     <p class='p_dot25'>I'm always eager looking for new challenges. They help me refreshing myself and keeping up-to-date.</p>
