--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
             <div class="block mt-10">
                 <h2>About me</h2>
                 <div class="aboutMe">
-                    <p class='p_dot25'>I am a developer with 5+ years experience working in automotive and backend projects in multicultural environment, fluent Java and Python language, and work effectively with lots of tools, IDEs, OSs and system schemes. I'm learning Python and ReactJS so I can extend my abilites. I love to work in diversity environments, where I can learn more from other people’s point of view. I'm always eager looking for new challenges. They help me refreshing myself and keeping up-to-date.</p>
+                    <p class='p_dot25'>I am a developer with 5+ years experience working in automotive and backend projects in multicultural environment, fluent Java and Python language, and work effectively with lots of tools, IDEs, OSs and system schemes. I'm learning Python and ReactJS so I can extend my abilites. I love to work in diversity environments, where I can learn more from other people’s point of view.</p>
                     <p class='p_dot25'>I finsished my Master degree of Data Science in University of Adelaide on 2022. Currently based on <b>Newcastle, NSW</b>.</p>
+
+                    <p class='p_dot25'>Always eager looking for new challenges.</p>
 
                 </div>
                 <div class="ending"></div>
@@ -348,9 +350,9 @@
 
                     </div>
                 </div>
-                <div class="block m-10"><span style="opacity:0;">This sentence is invisible</span></div>
+                <!-- <div class="block m-10"><span style="opacity:0;">This sentence is invisible</span></div>
 
-                <div class="m-20"><span style="opacity:0;">This sentence is invisible</span></div>
+                <div class="m-20"><span style="opacity:0;">This sentence is invisible</span></div> -->
                 <!-- <div class="mt-5"></div> -->
 
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
@@ -591,7 +593,6 @@
                     <div class="skewTag"><p>Flutter</p></div>
                     <div class="skewTag"><p>Go</p></div>
                     <div class="skewTag bgBlue2"><p>Design pattern</p></div>
-                    <div class="skewTag bgBlue2"><p>Data engineer certificate</p></div>
                 </div>
             </div>
             <div class="block m-32"></div>
