--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </div>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
-                                <div class="details">Engage in all phrase of Agile methodology and software developement cycle</div>
+                                <div class="details">Engage in all phrase of Agile methodology and software development cycle</div>
                             </div>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-star green2 w16px"></i></div>
@@ -256,7 +256,7 @@
                             </div>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-star green2 w16px"></i></div>
-                                <div class="details">Handle intra-team possition consulting and investigating software issues and solutions </div>
+                                <div class="details">Handle intra-team position consulting and investigating software issues and solutions </div>
                             </div>
                         </div>
                         <div class="techTool">
@@ -264,12 +264,15 @@
                             <div class="p5px myCardWrapper">
                                 <div class="skewTag"><p>Java</p></div>
                                 <div class="skewTag"><p>MySQL</p></div>
-                                <div class="skewTag"><p>Hibernate</p></div>
                                 <div class="skewTag"><p>JBOSS / Wildfly</p></div>
+                                <div class="skewTag"><p>SpringBoot 3</p></div>
+                                <div class="skewTag"><p>Hibernate</p></div>
                                 <div class="skewTag"><p>Docker</p></div>
                                 <div class="skewTag"><p>Bash script</p></div>
                                 <div class="skewTag"><p>CI/CD</p></div>
-                                <div class="skewTag"><p>Junit</p></div>
+                                <div class="skewTag"><p>JUnit</p></div>
+                                <div class="skewTag"><p>ReactJS</p></div>
+                                <div class="skewTag"><p>TailwindCSS</p></div>
                             </div>
                         </div>
 
@@ -329,6 +332,8 @@
                                 <div class="skewTag"><p>Firebase</p></div>
                                 <div class="skewTag"><p>ReactJS</p></div>
                                 <div class="skewTag"><p>NextJS</p></div>
+                                <div class="skewTag"><p>TailwindCSS</p></div>
+
                             </div>
                         </div>
                         <!-- <div class="skill">
@@ -350,10 +355,8 @@
 
                     </div>
                 </div>
-                <!-- <div class="block m-10"><span style="opacity:0;">This sentence is invisible</span></div>
 
-                <div class="m-20"><span style="opacity:0;">This sentence is invisible</span></div> -->
-                <!-- <div class="mt-5"></div> -->
+                <!-- <div class="m-10"><span style="opacity:0;">This sentence is invisible</span></div> -->
 
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
@@ -574,14 +577,10 @@
             <div class="block">
                 <h2>Learning</h2>
                 <div class="myCardWrapper px-10">
-                    <div class="skewTag"><p>Data Engineering</p></div>
-                    <div class="skewTag bgBlue2"><p>Apache Spark</p></div>
-                    <div class="skewTag bgBlue2"><p>Apache Airflow</p></div>
+                    <div class="skewTag"><p>Kotlin</p></div>
+                    <div class="skewTag"><p>SpringBoot 3</p></div>
                     <div class="skewTag bgBlue2"><p>Postgres</p></div>
-                    <div class="skewTag bgBlue2"><p>Kafka</p></div>
-                    <div class="skewTag bgBlue4 blue"><p>ETL / ELT</p></div>
-                    <div class="skewTag bgBlue4 blue"><p>Message queue / streaming</p></div>
-                    <div class="skewTag bgBlue4 blue"><p>Data warehouse</p></div>
+                    <div class="skewTag bgBlue2"><p>ReactJS</p></div>
                 </div>
                 <div class="ending"></div>
             </div>
@@ -590,16 +589,18 @@
             <div class="block">
                 <h2>Going to learn</h2>
                 <div class="myCardWrapper px-10">
-                    <div class="skewTag"><p>Flutter</p></div>
                     <div class="skewTag"><p>Go</p></div>
                     <div class="skewTag bgBlue2"><p>Design pattern</p></div>
+                    <div class="skewTag bgBlue2"><p>Web frontend</p></div>
                 </div>
             </div>
             <div class="block m-32"></div>
 
             <!-- <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>
             <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>
-            <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div> -->
+            <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>  -->
+
+
         </div>
 
 
